--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,96 @@
-apturl==0.5.2
+apsw==3.16.2.post1
 asn1crypto==0.24.0
-Brlapi==0.6.6
+astroid==1.6.0
+atomicwrites==1.2.1
+attrs==18.2.0
+autopep8==1.4.2
+backports.functools-lru-cache==1.4
+backports.ssl-match-hostname==3.5.0.1
+beautifulsoup4==4.6.0
+cached-property==1.3.1
 certifi==2018.1.18
 chardet==3.0.4
-command-not-found==0.3
+CherryPy==8.9.1
+Click==7.0
+configparser==3.5.0
+coverage==4.5.1
 cryptography==2.1.4
-cupshelpers==1.0
-defer==1.0.6
-distro-info==0.18
-httplib2==0.9.2
+cssselect==1.0.3
+cssutils==1.0.2
+dnspython==1.15.0
+docker==2.5.1
+docker-compose==1.17.1
+docker-pycreds==0.2.1
+dockerpty==0.4.1
+docopt==0.6.2
+enum34==1.1.6
+feedparser==5.2.1
+Flask==1.0.2
+funcsigs==1.0.2
+functools32==3.2.3.post2
+futures==3.2.0
+gyp==0.1
+html5-parser==0.4.4
+html5lib==0.999999999
 idna==2.6
+ipaddress==1.0.17
+isort==4.3.4
+itsdangerous==1.1.0
+Jinja2==2.10
+jsonschema==2.6.0
 keyring==10.6.0
 keyrings.alt==3.0
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.13.5
-lazr.uri==1.0.3
-louis==3.5.0
-macaroonbakery==1.1.3
-Mako==1.0.7
-MarkupSafe==1.0
-oauth==1.0.1
+lazy-object-proxy==1.3.1
+logilab-common==1.4.1
+lxml==4.2.1
+Markdown==2.6.9
+MarkupSafe==1.1.0
+mccabe==0.6.1
+mechanize==0.2.5
+mock==2.0.0
+more-itertools==4.3.0
+msgpack==0.5.6
+netifaces==0.10.4
 olefile==0.45.1
-pexpect==4.2.1
+pathlib2==2.3.2
+pbr==3.1.1
 Pillow==5.1.0
-protobuf==3.0.0
+pluggy==0.8.0
+py==1.7.0
 pycairo==1.16.2
+pycodestyle==2.4.0
 pycrypto==2.6.1
-pycups==1.9.73
+pycurl==7.43.0.1
+Pygments==2.2.0
 pygobject==3.26.1
-pymacaroons==0.13.0
-PyNaCl==1.1.2
-pyRFC3339==1.0
-python-apt==1.6.3
-python-debian==0.1.32
-pytz==2018.3
+pyliblzma==0.5.3
+pylint==1.8.3
+pyOpenSSL==17.5.0
+pyparsing==2.2.0
+pysqlite==1.0.1
+pytest==3.10.1
+pytest-cov==2.6.0
+python-dateutil==2.6.1
 pyxdg==0.25
 PyYAML==3.12
-reportlab==3.4.0
+regex==2017.12.12
+repoze.lru==0.7
 requests==2.18.4
-requests-unixsocket==0.1.5
+Routes==2.4.1
+rpm==4.14.1
+scandir==1.9.0
 SecretStorage==2.3.1
 simplejson==3.13.2
+singledispatch==3.4.0.3
 six==1.11.0
-system-service==0.3
-systemd-python==234
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
+texttable==0.9.1
+urlgrabber==3.10.2
 urllib3==1.22
-usb-creator==0.3.3
-virtualenv==15.1.0
-wadllib==1.3.2
-xkit==0.0.0
-zope.interface==4.3.2
+uTidylib==0.3
+virtualenv==16.1.0
+webencodings==0.5
+WebOb==1.7.3
+websocket-client==0.44.0
+Werkzeug==0.14.1
+wrapt==1.9.0
+yum-metadata-parser==1.1.4
